--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,7 +116,8 @@
     <string name="snapshot_indicator_removed">Removed</string>
     <string name="snapshot_indicator_changed">Changed</string>
     <string name="snapshot_indicator_moved">Moved</string>
-    <string name="snapshot_empty_list_title">No Changes</string>
+    <string name="snapshot_empty_list_title">No Components Changes</string>
+    <string name="snapshot_no_snapshot">No Snapshot</string>
     <string name="snapshot_detail_new_install_title">This App has newly installed</string>
     <string name="snapshot_detail_deleted_title">This App has been removed</string>
 
