--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -116,7 +116,8 @@
     <string name="snapshot_indicator_removed">移除</string>
     <string name="snapshot_indicator_changed">變更</string>
     <string name="snapshot_indicator_moved">移動</string>
-    <string name="snapshot_empty_list_title">沒有變更</string>
+    <string name="snapshot_empty_list_title">沒有組件變更</string>
+    <string name="snapshot_no_snapshot">沒有快照</string>
     <string name="snapshot_detail_new_install_title">這是一個全新的 App</string>
     <string name="snapshot_detail_deleted_title">此 App 已被移除</string>
 
