Remove unused resources.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,6 +10,7 @@
     <string name="channel_shoot">Сохранить</string>
     <string name="noti_shoot_title">Сохранение текущего снимка</string>
     <string name="noti_shoot_title_saved">Снимок сохранен</string>
+    <string name="permission_label_get_marked_libraries">Allow application to get marked libraries info provided by LibChecker</string>
 
     <!--  App list  -->
     <string name="menu_search">Поиск</string>
